Unit-tested and implemented basic logic of the new `/retailers` route
